(executables
 (names check_formula_equality converter simplify abbrev ltl_converter dual simplify_model as_program eliminate_unused_argument branching_time_program_converter infer_type program2 add_arguments infer_flag evaluate_hflz check_shadowing)
 (libraries muapprox core)
 (preprocess (pps ppx_jane))
 ; (flags (-cclib -lstdc++))
 ; (link_flags (-linkall))
 )

(env (dev (flags (:standard -warn-error -a+31))))
