(menhir
 (flags --dump --explain --table --inspection)
 (modules parser))
(ocamllex
 (modules lexer))

(library
 (public_name branching_time_program)
 (libraries
   muapprox.manipulate
   hflmc2_syntax
   hflmc2_util
   raw_program
   str
   core
   fmt
   menhirLib)
   (flags (-cclib -lstdc++))
 (preprocess (pps ppx_deriving.std ppx_compare ppx_sexp_conv ppx_inline_test ppx_expect)))

(env (dev (flags (:standard -warn-error -a+31))))
