(menhir
 (flags --graph --dump --explain --table --inspection)
 (modules parser))
(ocamllex
 (modules lexer))

(library
 (public_name ltl_program)
 (libraries
   core
   fmt
   logs
   logs.fmt
   lwt
   lwt.unix
   menhirLib)
 (preprocess (pps ppx_deriving.std ppx_compare ppx_sexp_conv ppx_inline_test ppx_expect)))
(env (dev (flags (:standard -warn-error -A -w -3-26-27-33))))
