(library
 (name manipulate)
 (public_name muapprox.manipulate)
 (inline_tests)
 (libraries
   str
   hflmc2_syntax
   hflmc2_util
   menhirLib)
 (preprocess (pps ppx_deriving.std ppx_compare ppx_sexp_conv ppx_inline_test ppx_expect))
 ; (instrumentation (backend landmarks --auto))
 )

(env (dev (flags (:standard -warn-error -a+31))))
