(library
 (name muapprox_prover)
 (public_name muapprox.muapprox_prover)
 (libraries
   hflmc2_syntax
   muapprox.fptprover
   muapprox.fptprover.ast
   muapprox.fptprover.hes
   muapprox.fptprover.rfunprover
   muapprox.manipulate
   yojson
   str)
 (preprocess (pps ppx_deriving.std ppx_compare ppx_sexp_conv)))

(env (dev (flags (:standard -warn-error -a+31))))
