(menhir
 (flags --dump --explain --table --inspection)
 (modules parser))
(ocamllex
 (modules lexer))

(library
 (public_name raw_program)
 (libraries
   muapprox.manipulate
   hflmc2_syntax
   hflmc2_util
   str
   core
   fmt
   logs
   lwt
   lwt.unix
   menhirLib)
   (flags (-cclib -lstdc++))
 (preprocess (pps ppx_deriving.std ppx_compare ppx_sexp_conv ppx_inline_test ppx_expect)))

(env (dev (flags (:standard -warn-error -a+31))))
