(menhir
 (flags --graph --dump --explain --table --inspection)
 (modules parser))
(ocamllex
 (modules lexer))

(library
 (public_name hflmc2_syntax)
 (libraries
   hflmc2_util
   menhirLib)
 (preprocess (pps ppx_deriving.std ppx_compare ppx_sexp_conv)))
(env (dev (flags (:standard -warn-error -A -w -3-26-27-33))))
