(menhir
 (flags --dump --explain --table --inspection)
 (modules parser))
(ocamllex
 (modules lexer))

(library
 (public_name hflmc2_syntax)
 (inline_tests)
 (libraries
   logs
   logs.fmt
   hflmc2_util
   menhirLib)
 (preprocess (pps ppx_deriving.std ppx_compare ppx_sexp_conv ppx_inline_test ppx_expect)))

(env (dev (flags (:standard -warn-error -a+31))))
