opam-version: "2.0"
version: "1.0"
maintainer: "gan13027830@gmail.com"
authors: ["Hogeyama"]
homepage: "https://github.com/Hogeyama/hflmc2"
bug-reports: "https://github.com/Hogeyama/hflmc2/issues"
dev-repo: "git+https://github.com/Hogeyama/hflmc2.git"
license: "Apache-2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
