
(library
 (name CEGISprover)
 (public_name muapprox.fptprover.CEGISprover)
 (modules
  constraint
  logicutil
  sample
  surveyPropagation
  BooleanFunctionSynthesizer
  localsample
  preprocessor
  solver
  template
  benchmark
  exampleInstance
  synthesizer
  TBSynthesizer
  SCQMSynthesizer
  DTSynthesizer
  LTBSynthesizer
  PASATSynthesizer
  PASIDSynthesizer
  validator
  )
 (libraries
  ast
  core
  convert
  util
  smt
  fptprover
  muapprox.fptprover.bes
  muapprox.fptprover.sygus
  muapprox.fptprover.zecchina
  )
 (synopsis "prover based on CEGIS"))

(test
  (name test)
  (modules test)
  (libraries
    CEGISprover
    testutil
    ast
    oUnit
    fptprover
  ))

