(library
  (name convert)
  (public_name muapprox.fptprover.convert)
  (modules
     desugar
     printer
     printerHum
     printerHum2
     parser
     hesutil
     formulaConverter
     simpleFormulaUtil
   )
  (libraries
     num
     core
     ast
     util
     hes
     fptprover
     config
  )
  (synopsis "convertion of formulas"))

(test
   (name test)
   (modules test)
   (libraries
    oUnit
    core
    ast
    convert
    ))

(test
  (name test_hes)
  (modules test_hes)
  (libraries
    oUnit
    testutil
    ast
    hes
    convert
  ))

