(library
  (name reclimitprover)
  (public_name muapprox.fptprover.reclimitprover)
  (modules
    solver
    simpleSolver
  )
  (libraries
    core
    z3
    util
    ast
    hes
    rfunprover
    convert
    optimize
    fptprover
    graph
  )
  (synopsis "prover with ranking function"))

(test
  (name test)
  (modules
    test
  )
  (libraries
    oUnit
    testutil
    ast
    smt
    reclimitprover
    z3
    core
    fptprover
  ))
