
(library
  (name rfunprover)
  (public_name muapprox.fptprover.rfunprover)
  (modules
    rankingFunction
    solver
  )
  (libraries
    core
    z3
    util
    ast
    smt
    str
    hes
    convert
    fptprover
    optimize
  )
  (synopsis "prover with ranking function"))

(test
  (name test)
  (modules test)
  (libraries
    oUnit
    testutil
    ast
    smt
    rfunprover
    z3
    core
    fptprover
  ))
